--- a/app/views/study_groups/ownerGroup.html.erb
+++ b/app/views/study_groups/ownerGroup.html.erb
@@ -49,6 +49,9 @@
 	 
 	<h1>Group members: <%= @ownedGroup.thearray.join(', ') %></h1>
 	
+<h1><%= link_to "Delete Group", @ownedGroup, method: :delete, data: {confirm: "Are you sure you want to delete your group?"}, style: 'color: black;' %>   
+</h1>
+	
 	<h1>Edit group:</h1>
 	  <div  class="col-md-6 col-md-offset-3">
 	<%= form_for(@ownedGroup, url: editGroup_path) do |f| %>
