--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -2,84 +2,23 @@
   	<link href="https://fonts.googleapis.com/css?family=Signika|Ubuntu|Quicksand|Lato|Arimo|Cabin" rel="stylesheet">
   	<script src="jquery-3.3.1.min.js"></script>
   	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-  	
 </head>
 <body id="not_taken" style="font-family: Signika; background-color: black;">
   <%= render "layouts/header" %>
-  
-  <!--<nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-light">-->
-  <!--  <div class="collapse navbar-collapse" id="navbarSupportedContent">-->
-  <!--    <ul class="navbar-nav mr-auto">-->
-  <!--      <li class="nav-item">-->
-  <!--        <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>-->
-  <!--      </li>-->
-  <!--      <li class="nav-item">-->
-  <!--      	<a class="nav-link" href="/about">About</a>-->
-  <!--      </li>-->
-  <!--      </li>-->
-  <!--      <li class="nav-item">-->
-  <!--        <a class="nav-link" href="/help">Help</a>-->
-  <!--      </li>-->
-  <!--      <li class="nav-item">-->
-  <!--        <a class="nav-link" href="/studygroup">Study Group</a>-->
-  <!--      </li>-->
-        
-        <!--<li class="nav-item">-->
-        <!--  <li><%= link_to "Tutor", '#' %></li> -->
-        <!--</li>-->
-  <!--      <div class="dropdown">-->
-  <!--          <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-  <!--            Account-->
-  <!--          </button>-->
-  <!--        <ul class="dropdown-menu">-->
-  <!--          <li class = "dropdown-item"><%= link_to "Profile", current_person %></li>-->
-  <!--          <li class = "dropdown-item"><%= link_to "Settings", edit_person_path(@person) %></li>-->
-  <!--          <li class="divider"></li>-->
-  <!--          <li class = "dropdown-item">-->
-  <!--            <%= link_to "Log out", logout_path, method: :delete %>-->
-  <!--          </li>-->
-  <!--        </ul>-->
-  <!--    </ul>-->
-  <!--    <a class="navbar-brand" href="/home">CV Enterprises</a>-->
-  <!--  </div>-->
-  <!--    </ul>-->
-  <!--  </div>-->
-  <!--</nav>-->
   <% provide(:title, @person.name) %>
-  <br>
   <% if @person.academy %>
     <h1 id="bob" style="font-size:3vw;">Profile - Tutor (Academy)</h1>
   <% else %>
     <h1 id="bob" style="font-size:3vw;">Profile - Tutor</h1>
   <% end %>
-  <div class="row">
-    <aside class="col-md-4">
-      <section class="tutor_info">
-        <h1>
-          <div id="bob">
-          <p style="	font-size: 2vw"><%= @person.name %> (<%= @person.email %>) </p>
-          <div><p></p></div>
-          <span id="editprofile">
-          <%= link_to "Edit Profile", edit_person_path(@person), {:style=>"color:#fff; font-size: 2vw;"} %>
-          </span><!--Edit:'(@oerson)' is redundant after
-          edit_person_path because the edit method in people_controller defines @person -->
 
-          <!--<button class="btn btn-warning" id="edit_profile">-->
-
-
-          <div><p></p></div>
-           <!--<script>-->
-           <!--   function addRow() {-->
-           <!--     alert('ok');-->
-           <!--     document.getElementById("VisualTable").insertRow(-1);-->
-           <!--      document.getElementById("VisualTable").insertRow(1);-->
-           <!--      document.getElementById("VisualTable").insertRow().insertCell(0);-->
-           <!--      document.getElementById("VisualTable").insertRow().insertCell(1);-->
-           <!--       document.getElementById("VisualTable").insertRow().insertCell(2);-->
-           <!--   }-->
-           <!--   window.onload = addRow();-->
-           <!-- </script> -->
-           
+  <div id="bob">
+    <p style="	font-size: 2vw"><%= @person.name %> (<%= @person.email %>) </p>
+    <span id="editprofile">
+      <%= link_to "Edit Profile", edit_person_path(@person), {:style=>"color:#fff; font-size: 2vw;"} %>
+    </span><!--Edit:'(@oerson)' is redundant after
+    edit_person_path because the edit method in people_controller defines @person -->
+    
           <table style="width:180%" id="VisualTable">
             <tr>
               <th class="tutoringsubject" style="width:43%", "position:absolute">Tutoring:</th>
@@ -194,7 +133,5 @@
       </section>
     </aside>
   </div>
-  <!--<div id="footer" class="small_content">-->
-    
-  <!--</div>-->
+     <!--<a data-confirm="Are you sure you want to delete your account?" rel="nofollow" data-method="delete" href="/people/4" style="font-size: 2vw" class="delete">Delete Account</a>   <!--instead of accountDelete_path just submit the current person DDDD accountDelete_path(id: Tutor.find_by(people_id: @person.id).id)--> 
 </body>
