Fixed tutor thingy

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -756,7 +756,7 @@ ul.tutors li img{
 	height: 100%;
 	position: absolute;
 	left: 97%;
-	top: 0px !important;
+	top: 0px;
 	width: 15vw;
 	// padding-top: 0px;
 	padding: 10px;
