--- a/app/views/subject/findresults.html.erb
+++ b/app/views/subject/findresults.html.erb
@@ -50,7 +50,7 @@
                   			<div class="location">
                     			 <i class="fa fa-map-marker fa-2x"></i>
                     			  <div class="loc-popup">CV Library</div>
-                    		</div>	z
+                    		</div>	
                 			<% else %>
                   			<div class="rate">
                   				Rate: <%= subjuctivo.rate %>
