--- a/app/views/people/_person.html.erb
+++ b/app/views/people/_person.html.erb
@@ -1,6 +1,6 @@
 <li style="background-color: rgb(55,155,55,.4); ">
   <%= gravatar_for person, size: 50 %>
-  <%= link_to person.name, person %>
+  <%= link_to person.name, person_path(person) %>
   
    <% if Person.find_by(id: session[:tutor_id]).admin? && !current_person?(person) %> <!-- !Person.find_by(id: session[:tutor_id])?(person) *should be where current_person?(person) is, doesn't work for some reason* -->
     | <%= link_to "delete", person, method: :delete,
