--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -31,7 +31,7 @@
             </tr>
             
               <% Subject.all.each do |i| %>
-                <% if (i.creatorid == session[:tutor_id]) %>
+                <% if (i.creatorid == @person.id) %>    <!-- used to be session[:tutor_id, changed so admins can see subjects -->
                  
                   <table style="width:150%" id="VisualSubjects">   <!-- NOTE: I'm creating a new table here instead of adding a row because for some reason it won't add a row to the existing table and display the name, date, and rate outside the table -->
                     <tr>
