--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -77,8 +77,8 @@
           <th class="requestsubject" style="width:20%", "position:absolute">Subject</th> 
           <th class="requestday" style="width:20%", "position:absolute">Day</th> 
           <th class="requestday" style="width:15%", "position:absolute">Asked on</th> 
-          <th class="requestday" style="width:10%", "position:absolute">Options</th> 
-           <th class="requestday" style="width:10%", "position:absolute">Did you meet?</th> 
+          <!--<th class="requestday" style="width:10%", "position:absolute">Options</th> -->
+           <th class="requestday" style="width:10%", "position:absolute">Accept?</th>    <!-- used to say "Did you meet?" -->
         </tr>
         
           <% TutorRequest.all.each do |i| %>
@@ -91,10 +91,13 @@
                   <th class="requestsubject" style="width:20%", "position:absolute"> <%= i.whichSubject %></th> 
                   <th class="requestday" style="width:20%", "position:absolute"> <%= i.time %></th> 
                   <th class="requestday" style="width:15%", "position:absolute"> <%= i.created_at.strftime("%m-%d-%y") %><br>(<%= i.created_at.in_time_zone('Pacific Time (US & Canada)').strftime("%I:%M %P") %>)</th> 
-                  <th class="tutoringoptions" class="delete" style="width: 10%", "position:absolute"><%= link_to " Delete", requestdelete_path(check: i.id), method: :delete,
-                              data: { confirm: "Are you sure?" } %></th>
-                   <th class="tutoringoptions", style="width: 10%", "position:absolute"><%= link_to "Yes", accepted_path, data: { confirm: "Are you sure?" } %> | <%= link_to "No", accepted_path, data: { confirm: "Are you sure?" } %></th>
-          
+                   
+                  <!--<th class="tutoringoptions" class="delete" style="width: 10%", "position:absolute"> /%= link_to " Delete", requestdelete_path(check: i.id), method: :delete, data: { confirm: "Are you sure?" } %></th>-->
+                  <% if(i.accepted) %>
+                     <th class="tutoringoptions", style="width: 10%", "position:absolute"> Accepted </th>
+                  <% else %>
+                    <th class="tutoringoptions", style="width: 10%", "position:absolute"><%= link_to "Yes", {:controller => :tutor_requests, :action => :makeAccepted, :check => i.id},  :method => :post, data: { confirm: "Accept request?" } %> | <%= link_to "No", requestdelete_path(check: i.id), method: :delete, data: { confirm: "Decline request? This action cannot be reversed and will delete the request" } %></th>
+                  <% end %>
                 </tr>
                 <%# session[:selected_subject_id] = i.id %>
                  
@@ -102,71 +105,10 @@
               
             <% end %>
           <% end %>
-        
-        
-        <!--<tr>-->
-        <!--  <td> %= Subject.first.name %></td> <!-- Subject.find_by(tutor_id: params[:id]) --> 
-        <!--  <td> %= Subject.first.date %> </td> -->
-        <!--  <td>%= Subject.first.rate %></td>-->
-        <!--</tr>-->
-        <!--<tr>-->
-        <!--  <td>%=Subject.second.name%></td>-->
-        <!--  <td>%= Subject.second.date %></td> -->
-        <!--  <td>%= Subject.second.rate %></td>-->
-        <!--</tr>-->
       </table>
     </div>
   </h1>
-  <h1 class="requestscontainer-responsive">
-    <div id="bob">
-      <p style = "color:#fff; font-size: 2vw">Requests</p>
-      <table style="width:460%" id="VisualTable"> 
-        <tr>
-          <th class="requestname" style="width:30%", "position:absolute">Name/Email</th>
-          <th class="requestsubject" style="width:20%", "position:absolute">Subject</th> 
-          <th class="requestday" style="width:20%", "position:absolute">Day</th> 
-          <th class="requestday" style="width:15%", "position:absolute">Asked on</th> 
-          <th class="requestday" style="width:10%", "position:absolute">Options</th> 
-           <th class="requestday" style="width:10%", "position:absolute">Did you meet?</th> 
-        </tr>
-        
-          <% TutorRequest.all.each do |i| %>
-            <% if (i.name == Person.find_by(id: session[:tutor_id]).email)%>
-             
-              <table style="width:160%" id="VisualSubjects">   <!-- NOTE: I'm creating a new table here instead of adding a row because for some reason it won't add a row to the existing table and display the name, date, and rate outside the table -->
-                <tr>
-                  <th class="requestname-responsive" style="width:30%", "position:absolute">
-                     <a target="_blank" style="color: #00BFFF;"href="https://mail.google.com/mail/?view=cm&fs=1&to=<%= i.email %>&su=Tutoring &body=&bcc="><%= i.student %></a>
-                  </th>
-                  <th class="requestsubject" style="width:20%", "position:absolute"> <%= i.whichSubject %></th> 
-                  <th class="requestday" style="width:20%", "position:absolute"> <%= i.time %></th> 
-                  <th class="requestday" style="width:15%", "position:absolute"> <%= i.created_at.strftime("%m-%d-%y") %><br>(<%= i.created_at.in_time_zone('Pacific Time (US & Canada)').strftime("%I:%M %P") %>)</th> 
-                  <th class="tutoringoptions" class="delete" style="width: 10%", "position:absolute"><%= link_to " Delete", requestdelete_path(check: i.id), method: :delete,
-                              data: { confirm: "Are you sure?" } %></th>
-                   <th class="tutoringoptions", style="width: 10%", "position:absolute"><%= link_to "Yes", accepted_path, data: { confirm: "Are you sure?" } %> | <%= link_to "No", accepted_path, data: { confirm: "Are you sure?" } %></th>
-          
-                </tr>
-                <%# session[:selected_subject_id] = i.id %>
-                 
-              </table>
-              
-            <% end %>
-          <% end %>
-        
-        
-        <!--<tr>-->
-        <!--  <td> %= Subject.first.name %></td> <!-- Subject.find_by(tutor_id: params[:id]) --> 
-        <!--  <td> %= Subject.first.date %> </td> -->
-        <!--  <td>%= Subject.first.rate %></td>-->
-        <!--</tr>-->
-        <!--<tr>-->
-        <!--  <td>%=Subject.second.name%></td>-->
-        <!--  <td>%= Subject.second.date %></td> -->
-        <!--  <td>%= Subject.second.rate %></td>-->
-        <!--</tr>-->
-      </table>
-    </div>
-  </h1>
+
       <br>
       <!--replced your link_to with an a href-->
       
