--- a/app/views/subject/findresults.html.erb
+++ b/app/views/subject/findresults.html.erb
@@ -58,7 +58,7 @@
                   		<% end %>
                     <div class="request_container nodisplay">
                           <div class="tutorsendrequest">
-                                <%= form_tag(request_path(name: Person.find_by(id: subjuctivo.creatorid).email, whichSubject: subjuctivo.name, time: subjuctivo.date), method: :post) do %> <!-- params[:name] is for the tutor's email I just have too much to do rn to change the attribute name -->
+                                <%= form_tag(request_path(tutoremail: Person.find_by(id: subjuctivo.creatorid).email, whichSubject: subjuctivo.name, time: subjuctivo.date), method: :post) do %> <!-- params[:name] is for the tutor's email I just have too much to do rn to change the attribute name -->
                                   <div><p></p></div>
                          	       <h4 class="findatutor_heading">Send request to tutor: </h4>
                          	       <input type="text" name="email" id="email" placeholder="Enter your email" class = "form-control"><br>
